--- a/src/app/Layouts/topbar/topbar.component.html
+++ b/src/app/Layouts/topbar/topbar.component.html
@@ -3,9 +3,9 @@
       <div class="col-sm-6 col-5">
         <!-- <h3 class="p-3">LOGO</h3> -->
         <img
-          src="https://andica.com/images/logo_andica.gif"
+          src="../assets/images/nwlogo2.png"
           alt="logo"
-          width="150px" class="m-3"
+          width="80px" class="mx-5"
         />
       </div>
       <div class="col-sm-6 col-7 text-end px-5">
